CS35L/assignment 3/hw3.txt
Q1: Why did Brady's patch remove the line "case_long_iso_time_style:"?
    : In Brady's code, the goto statement "case_long_iso_time_style:" is
      removed because this statement would not be referenced and wasn't 
      required which wasn't really necessary to remove it.
    
Q2: If your company adopts this patched version of Coreutils instead of the
    default one, what else should you watch out for?
    : The only change that's been made throughout the patch is to change
      the date format in unix format.
      A possibility might happen where in countries, like European countries,
      use different date format as like day-month-year, which can be a problem,
      or systems using different locale can also have the same issue.

Q3: What happens when this script is invoked on an empty file?
    : Running randline.py on an empty txt file I get the error msg below

     Trackback (most recent call last):
       File "./randline.py", line 70, in <module>
         main()
       File "./randline.py", line 64, in main
         sys.stdout.wrtie(generator,chooseline())
       File "./randline.py", line 34, in chooseline
         return random.choice(self.lines)
       File "/usr/lib64/python2.7/random.py", line 274, in choice
          return seq[int(self.random() * len(seq))] # raises IndexError if
          seq is empty
       IndexError: list index out of range

    : using /dev/null as empty directory, I still get the same error msg.
      The reason is the given python script accessess index of the contents
      and passes it as an argument. Since it is empty an exception is prompted.

Q4: What happens when this script is invoked with Python 3 rather than
    Python 2 and why?
    : running randline.py with python3, I get a msg below
      
      File "./randline.py", line 65
          except IOError as (errno, strerror):
                            ^
      SyntaxError: invalid syntax
      
      The main reason is Python 2 and 3 have syntax differences, prompting
      an error message. Referring a post in stackoverflow, it mentions
      "exceptions in python 2 are iterable that you can iterate over the 
      parameters given to the exception by iterating over the exception 
      itself", while in python 3 it has been removed.
